<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_13224065</name>
  <version>0.0.0</version>
  <description>Sebuah Node Untuk Menghubungkan Data Topik autonomous_vel, joy_vel, keyboard_vel. Menuju Topik cmd_type dan cmd_vel</description>
  <maintainer email="jouvan294@gmail.com">jouvan</maintainer>
  <license>TODO: License declaration(IDK DIISI APA)</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
